commiteg by guy

--- a/Headwork2/src/app/public/navbar/navbar.component.html
+++ b/Headwork2/src/app/public/navbar/navbar.component.html
@@ -28,14 +28,15 @@
 
     <input type="text" placeholder="search" class="form-control" style="width: 30%;">
 
-    <button mat-button> <i class="fas fa-search"></i></button> 
+    <button mat-button> <i class="fas fa-search"></i></button>
     <span class="example-spacer"></span>
-     
+
     <button mat-button routerLink="login" *ngIf="!isAuth" >
       <i class="fas fa-sign-in-alt"></i>
     </button>
 
     <h5 *ngIf="isAuth" style="size:10px;">{{user.name}}</h5>
+    <h5 *ngIf="isAdmin" style="size:10px;">{{user.name}}</h5>
 
     <button mat-button *ngIf="isAuth" (click)="onLogout()" >
       <i class="fas fa-sign-out-alt"></i>
@@ -44,11 +45,11 @@
     <button mat-button *ngIf="!isAuth" routerLink="register" >
       <i class="fas fa-user-plus"></i>
     </button>
-    
-    
+
+
     </mat-toolbar>
     <!-- Add Content Here -->
-    
+
   </mat-sidenav-content>
- 
+
  </mat-sidenav-container>
