--- a/Headwork2/src/app/user/tasks/tasks.component.html
+++ b/Headwork2/src/app/user/tasks/tasks.component.html
@@ -1,40 +1,1 @@
-
-<div class="row" style="margin:10px">
-
-<div class="col-md-2">
-  <div class="filtres">
-    <h4>Categories</h4>
-    <div>
-        <mat-checkbox>Cinema</mat-checkbox>
-    </div>
-    <div>
-        <mat-checkbox>Informatics</mat-checkbox>
-    </div>
-    <div>
-        <mat-checkbox>Biology</mat-checkbox>
-    </div>
-    <div>
-        <mat-checkbox>History</mat-checkbox>
-    </div>
-  </div>
-</div>
-
-<mat-divider [vertical]="true"></mat-divider>
-
-<div class="col-md-4">
-  <div *ngFor="let task of tasks">
-    <div class="card" style="width: 20rem; margin-block-end: 10px;">
-        <div class="card-body">
-          <h5 class="card-title"><b>{{task.title}}</b></h5>
-          <p>{{task.description}}</p>
-        <!--<div class="text-content" [innerHTML]="task.body"></div>-->
-        <div>
-        </div> 
-        
-        </div>
-      </div>
-    </div>
-</div>
-
-
-</div>
+<p> tasks works here </p>
