--- a/Headwork2/src/app/admin/super-admin/super-admin.component.html
+++ b/Headwork2/src/app/admin/super-admin/super-admin.component.html
@@ -1,7 +1,17 @@
 <div class="row" style="margin-top:10px;">
-  <div class="col-md-2" style="margin-right:10px;">
+  <div class="col-md-2 side-bar" >
     <h3>Control panel</h3>
-    <a routerLink="./list-user"> Users List </a>
+    <ul>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+    <mat-list-item> <a routerLink="./list-user"> Users List </a> </mat-list-item>
+
+    </ul>
   </div>
   <div class="col-md-9">
     <h1>Gestion des utilisateurs</h1>
