commited by guy

--- a/Headwork2/src/app/admin/super-admin/super-admin.component.css
+++ b/Headwork2/src/app/admin/super-admin/super-admin.component.css
@@ -1,6 +1,11 @@
 .side-bar{
-  margin-right:10px;
   background-color:rgb(228, 222, 222);
   border-radius: 10px 10px 10px 10px;
-  padding-left: 30px;
+  height: 100%;
+}
+.entete{
+  background-color: rgb(228, 222, 222);
+  border-radius: 10px 10px 10px 10px;
+  padding: 5px;
+  margin-bottom: 10px;
 }
