--- a/Headwork2/src/app/admin/list-user/list-user.component.html
+++ b/Headwork2/src/app/admin/list-user/list-user.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element"> <button type="submit" mat-button routerLink="detail/{{element.id}}">detail</button> </td>
+        <td mat-cell *matCellDef="let element"> <button type="submit" mat-button routerLink="./details/{{element.id}}">detail</button> </td>
       </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
