--- a/Headwork2/src/app/admin/update-user/update-user.component.css
+++ b/Headwork2/src/app/admin/update-user/update-user.component.css
@@ -1,4 +1,4 @@
-.register{
+.User-detail{
   /*background-image: url('/src/assets/img/img/login.jpg');*/
  /*background-color: aqua; */
  width: auto;
