--- a/Headwork2/src/app/admin/list-user/list-user.component.html
+++ b/Headwork2/src/app/admin/list-user/list-user.component.html
@@ -18,7 +18,13 @@
 
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element"> <button type="submit" mat-button routerLink="./details/{{element.id}}">detail</button> </td>
+        <td mat-cell *matCellDef="let element">
+          <div>
+              <button type="submit" class="btn btn-primary" mat-button (click)="openDialog(element.id)">detail</button>
+              <button type="submit" class="btn btn-success" mat-button routerLink="./update/{{element.id}}">update</button>
+              <button type="submit" class="btn btn-danger" mat-button (click)="deleteUser(element.id)">delete</button>
+          </div>
+        </td>
       </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
