--- a/Headwork2/src/app/user/tasks/tasks.component.html
+++ b/Headwork2/src/app/user/tasks/tasks.component.html
@@ -1,1 +1,18 @@
-<p> tasks works here </p>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>{{task.title}}</mat-card-title>
+        <mat-card-subtitle>{{task.description}}</mat-card-subtitle>
+    </mat-card-header>
+    <div class="image-loader" *ngIf="task.typeDeQuestion==1">
+        <img mat-card-image [src]="task.image" style="max-height: 200px; width: auto; margin: auto;">
+    </div>
+    <mat-card-content>
+        <p>{{task.question}}</p>
+        <mat-form-field>
+            <input matInput placeholder="Answer the question : ">
+        </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button color="primary">SUBMIT</button>
+    </mat-card-actions>
+</mat-card>
