Added a json server; user part is almost done we can create, choose and do tasks

--- a/Headwork2/src/app/user/tasks/tasks.component.html
+++ b/Headwork2/src/app/user/tasks/tasks.component.html
@@ -1,13 +1,14 @@
+<div *ngIf="task | async; let item">
 <mat-card class="example-card">
     <mat-card-header>
-        <mat-card-title>{{task.title}}</mat-card-title>
-        <mat-card-subtitle>{{task.description}}</mat-card-subtitle>
+        <mat-card-title>{{item.title}}</mat-card-title>
+        <mat-card-subtitle>{{item.description}}</mat-card-subtitle>
     </mat-card-header>
-    <div class="image-loader" *ngIf="task.typeDeQuestion==1">
-        <img mat-card-image [src]="task.image" style="max-height: 200px; width: auto; margin: auto;">
+    <div class="image-loader" *ngIf="item.typeDeQuestion==1">
+        <img mat-card-image [src]="item.image" style="max-height: 200px; width: auto; margin: auto;">
     </div>
     <mat-card-content>
-        <p>{{task.question}}</p>
+        <p>{{item.question}}</p>
         <mat-form-field>
             <input matInput placeholder="Answer the question : ">
         </mat-form-field>
@@ -16,3 +17,4 @@
         <button mat-raised-button color="primary">SUBMIT</button>
     </mat-card-actions>
 </mat-card>
+</div>
