--- a/Headwork2/src/app/admin/list-user/list-user.component.html
+++ b/Headwork2/src/app/admin/list-user/list-user.component.html
@@ -1,33 +1,8 @@
-<h3>Liste of User</h3>
-
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-  </mat-form-field>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- Name Column -->
-    <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef> Nom </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef> Role </th>
-      <td mat-cell *matCellDef="let element"> {{element.role}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element">
-          <div>
-              <button type="submit" class="btn btn-primary" mat-button (click)="openDialog(element.id)">detail</button>
-              <button type="submit" class="btn btn-success" mat-button routerLink="./update/{{element.id}}">update</button>
-              <button type="submit" class="btn btn-danger" mat-button (click)="deleteUser(element.id)">delete</button>
-          </div>
-        </td>
-      </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
+<h3>List of Users</h3>
+  <mat-list>
+      <mat-list-item *ngFor="let user of users | async; let i = index">
+        <mat-divider></mat-divider>
+        <h3 matLine>{{user.username}}</h3>
+        <button mat-raised-button (click)="deleteUser(i)" color="primary">Bannir l'utilisateur </button>	
+      </mat-list-item>
+  </mat-list>
