--- a/Headwork2/src/app/public/home/home.component.css
+++ b/Headwork2/src/app/public/home/home.component.css
@@ -6,3 +6,11 @@
 .header{
     height: 15%;
 }
+
+.resize {
+    max-width: 25%;
+    max-height: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
