--- a/Headwork2/src/app/public/home/home.component.html
+++ b/Headwork2/src/app/public/home/home.component.html
@@ -3,13 +3,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" >
-            <img class="d-block w-100" src="/src/assets/img/bullock.jpg" alt="First slide">
+            <img class="resize" src="../../../assets/img/logo_libre_var.png" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/src/assets/img/img1.png" alt="Second slide" >
+            <img class="resize" src="../../../assets/img/img1.png" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/src/assets/img/img2.png" alt="Third slide">
+            <img class="resize" src="../../../assets/img/img2.png" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
