Superadmin implemented, task and create tuned, home page better

--- a/Headwork2/src/app/public/home/home.component.css
+++ b/Headwork2/src/app/public/home/home.component.css
@@ -14,3 +14,26 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.welcome{
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .description{
+    display: flex;
+    /*flex-direction: column;*/
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(225, 225, 255);
+  }
+  
+  .text{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 70%;
+    background-color: white;
+    box-shadow: 5px 5px 10px rgb(210, 210, 255);
+  }
