--- a/Headwork2/src/app/public/home/home.component.html
+++ b/Headwork2/src/app/public/home/home.component.html
@@ -22,49 +22,21 @@
         </a>
       </div>
 </div>
-<div class="head" style="margin-top:10px;"><h1 style="text-align:center;"><u>Welcome to HEADWORK</u> </h1></div>
-<div class="corps">
-  <div class="row">
-  <div class="col-md-6">
-    <div class="presentation">
-        <ul>
-          <li>Project ID and ref: ANR-16-CE23-0015</li>  
-        </ul>
-    Crowdsourcing relies on potentially huge numbers of on-line participants 
-    to resolve data acquisition or analysis tasks. It is an exploding area that 
-    impacts various domains, ranging from scientific knowledge enrichment to market 
-    analysis support. But currently, existing crowd platforms rely mostly on low level
-    programming paradigms, rigid data models and poor participant profiles, which 
-    yields severe limitations. The low- level nature of existing solutions prevents 
-    the design of complex data acquisition workflows, that could be executed, composed,
-    searched and even be proposed by participants them- selves. Taking into account the
-    quality, uncertainty, inconsistency and representativeness of participant 
-    contributions is still an open problem. Methods for assigning a task to the correct 
-    </div>
-
+<div class="welcome">
+    <h1>WELCOME TO HEADWORK</h1>
   </div>
-  <div class="col-md-6">
-    participant according to his trust, motivation and expertise, automatically improving
-    crowd execution time, computing optimal participant rewards, are missing. Similarly,
-    usual crowd campaigns produce isolated and rigid data sets: A flexible and common 
-    data model for the produced knowledge about data and participants could allow 
-    participative knowledge acquisition. To overcome these challenges, Headwork will define:
+  <div class="description">
+    <div class ="text" id="text1" [@scrollAnimLeft]="state">
       <ul>
         <li>
-          Rich workflow, participant, data and knowledge models to capture various kind of crowd applications 
-          with complex data acquisition tasks and human specificities
+          Project ID and ref: <a href="http://www.agence-nationale-recherche.fr/Projet-ANR-16-CE23-0015">ANR-16-CE23-0015</a>
+          <br/>
+          <p>Crowdsourcing relies on potentially huge numbers of on-line participants to resolve data acquisition or analysis tasks. It is an exploding area that impacts various domains, ranging from scientific knowledge enrichment to market analysis support. But currently, existing crowd platforms rely mostly on low level programming paradigms, rigid data models and poor participant profiles, which yields severe limitations. The low- level nature of existing solutions prevents the design of complex data acquisition workflows, that could be executed, composed, searched and even be proposed by participants them- selves. Taking into account the quality, uncertainty, inconsistency and representativeness of participant contributions is still an open problem. Methods for assigning a task to the correct participant according to his trust, motivation and expertise, automatically improving crowd execution time, computing optimal participant rewards, are missing. Similarly, usual crowd campaigns produce isolated and rigid data sets: A flexible and common data model for the produced knowledge about data and participants could allow participative knowledge acquisition. To overcome these challenges, Headwork will define:</p>
         </li>
-        <li>
-          Methods for deploying, verifying, optimizing, but also monitoring and adapting crowd- based workflow 
-          executions at run time.
-        </li>
+        <li>Rich workflow, participant, data and knowledge models to capture various kind of crowd applications with complex data acquisition tasks and human specificities</li>
+        <li>Methods for deploying, verifying, optimizing, but also monitoring and adapting crowd- based workflow executions at run time.</li>
       </ul>
-  </div>
-</div>
-</div>
-
-<div class="body2">
-
+    </div>
 </div>
 
 
