--- a/Headwork2/src/app/superadmin/list-admin/update-user-dialog.html
+++ b/Headwork2/src/app/superadmin/list-admin/update-user-dialog.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-        <p>Do you wish to ban {{data.username}} ?</p>
+        <p>Do you wish to {{data.action}} {{data.username}} ?</p>
 </div>
 <div mat-dialog-actions>
     <button mat-raised-button (click)="onNoClick()" color="warn">No</button>
