--- a/Headwork2/src/app/admin/list-user/list-user.component.html
+++ b/Headwork2/src/app/admin/list-user/list-user.component.html
@@ -3,6 +3,7 @@
       <mat-list-item *ngFor="let user of users | async; let i = index">
         <mat-divider></mat-divider>
         <h3 matLine>{{user.username}}</h3>
-        <button mat-raised-button (click)="deleteUser(i)" color="primary">Bannir l'utilisateur </button>	
+        <button mat-raised-button (click)="deleteUser(i)" color="primary">Ban User</button>	
+        <span></span>
       </mat-list-item>
   </mat-list>
