--- a/Headwork2/src/app/admin/super-admin/super-admin.component.html
+++ b/Headwork2/src/app/admin/super-admin/super-admin.component.html
@@ -14,7 +14,7 @@
       </div>
   </div>
   <div class="col-md-9">
-    <h1>Gestion des utilisateurs</h1>
+    <h1>Admin Management</h1>
     <router-outlet></router-outlet>
   </div>
 </div>
