--- a/Headwork2/src/app/auth/login/login.component.html
+++ b/Headwork2/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
               <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" placeholder="user name" />
           </div>
           <div class="form-group">
-              <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+              <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="password" />
           </div>
           <div class="form-group">
               <button mat-raised-button type="submit" color="primary">Login</button>
