--- a/Headwork2/src/styles.css
+++ b/Headwork2/src/styles.css
@@ -12,3 +12,12 @@ body {
     padding:0%;
     height: 100hv;
   }
+
+  .basic-container {
+    padding: 30px;
+  }
+  
+  .version-info {
+    font-size: 8pt;
+    float: right;
+  }
