--- a/Headwork2/src/app/admin/super-admin/super-admin.component.html
+++ b/Headwork2/src/app/admin/super-admin/super-admin.component.html
@@ -7,9 +7,8 @@
       <div class="side-bar">
         <ul>
           <mat-list-item> <a routerLink="./list-user"> <i class="fas fa-users"></i> Users Management </a> </mat-list-item>
-          <mat-list-item> <a routerLink="./"> Skills Management </a> </mat-list-item>
-          <mat-list-item> <a routerLink="./#"> Tasks Management </a> </mat-list-item>
-          <mat-list-item> <a routerLink="./#"> Task Management </a> </mat-list-item>
+          <mat-list-item> <a routerLink="./list-tasks"> Tasks Management </a> </mat-list-item>
+          <mat-list-item> <a routerLink="./#"> Skills Management </a> </mat-list-item>
         </ul>
       </div>
   </div>
